--- a/PageLayoutTechniques.html
+++ b/PageLayoutTechniques.html
@@ -31,5 +31,9 @@ Page Layout Techniques:
 
 
 2. Using Non Semantic Tag:
-	<div>
+	Div Tag:
+		By default heigth of div is 0.
+		it is a block element it means that it takes the full width on the screen.
 
+
+		
